	man-with-signed-key.png: Add png file (converted from eps.gz
	files).

	* manual/verleihnix.png: Update in original pixel size.

	* manual/Makefile.am: Remove eps.gz files, add converted png, modify
	rules to build latex documents.

	* manual/novices.tex: Remove dvips, add graphic commands for build with pdflatex.

	* manual/fdl-book.tex, manual/gpg4win-compendium-de.tex: Update
	index.

2010-05-20  Emanuel Schuetze <emanuel@intevation.de>

	* manual/gpg4win-compendium-de.tex: Add link to gpg4win website.
	  Update creation year of compendium.
	
	* manual/verleihnix.png, Makefile.am, manual/verleihnix.eps.gz: 
	  Add updated png image which replaced old (removed) eps comic image.

	* manual/gpg4win-compendium-de.tex, manual/fdl-book.tex:
	  Add index (makeindex).

2010-05-19  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/openpgp-icon.png, manual/smime-icon.png, manual/Makefile.am: 
	  Add redesigned (png) icons for marginline. Replaced eps files.

	* manual/smime-icon.eps.gz, manual/openpgp-icon.eps.gz:
	  Remove icons, replaced by png icons.

	* manual/gpg4win-compendium-de.tex: Fix overlapping lines. 
	Some minor changes
	
	* manual/gpg4win-compendium-de.tex: Some changes 
	(basically by external lector, part 3)

2010-05-18  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/gpg4win-compendium-de.tex: Changes by external
	lector (part 2).

	* manual/smime-icon.eps.gz, manual/openpgp-icon.eps.gz:
	Redesign smime and openpgp icon for marginline.

2010-05-11  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
	
	* manual/gpg4win-compendium-de.tex: Enlarge images (screenshots,
	comics and gpg4win header icon)

2010-05-07  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
	* logo/gpg4win-nsis-wizard_install-uninstall-164x314.xcf, 
	logo/gpg4win-nsis-header_install-uninstall-150x57.xcf:
	Add gimp source file for nsis wizard and header image.

	* website/documentation.htm4, website/documentation-de.htm4:
	Update compendium release month.
